@@ -1,3 +1,6 @@
+11:
+- Add priority setting
+
 10:
 - Update to 0.2.0.696
 
